--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* General */
+/* GENERAL */
 
 *, ::before, ::after {
     box-sizing: border-box;
@@ -16,6 +16,8 @@ body{
 
 }
 
+
+
 #section {
     background-color: white;
     padding: 60px 30px;
@@ -27,14 +29,93 @@ p {
     margin-bottom: 20px;
 }
 
+h1, h2, h3 {
+    font-weight: bold;
+}
+
+h1, h2 {
+    margin-bottom: 1rem;
+}
 h1 {
-    font-style: 50px;
+    font-size: 50px;
 }
 
 h2{
-    font-style: 30px;
+    font-size: 30px;
+    color: red;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 h3{
-    font-style: 18px;
+    font-size: 18px;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+ul {
+    list-style: disc;
+    padding: 1rem;
+}
+
+.boldText {
+    font-weight: bold;
+}
+
+/*  header */
+
+header{
+    border-bottom: solid 1px #f3735f;
+    background-color: white;
+    height: 80px;
+}
+
+header img {
+    height:60px; /* cannot use 80% ? failed to vertically center*/
+}
+
+/* --MAIN-- */
+
+main > .container {
+    background-color: #fff;
+    margin-top: 20px;
+    padding: 30px 20px;
+}
+
+h1, .baseLine, .time {
+    text-align: center
+}
+
+p.time {
+    display: inline-block; /*?*/
+    margin: 0 auto; /*?*/
+    padding: 10px 30px;
+    background-color: #8A98B1;
+    border-radius: 5px;
+    font-weight: bold;
+    color: white;
+}
+
+#gallery {
+    width: 100%;
+    margin: 2rem 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+#gallery > img {
+    width: 30%;
+    aspect-ratio: 1; /* looks invalid ?*/
+    object-fit: cover;
+    border-radius: 10px;;
+}
+
+
+/* --FOOTER-- */
+
+footer {
+    text-align: center;
+    padding: 50px 0;
 }
