--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,7 @@ body{
 .container{
     width: 1024px;
     margin: 0 auto;
-
 }
-
-
 
 #section {
     background-color: white;
@@ -36,18 +33,19 @@ h1, h2, h3 {
 h1, h2 {
     margin-bottom: 1rem;
 }
+
 h1 {
     font-size: 50px;
 }
 
-h2{
+h2 {
     font-size: 30px;
     color: red;
     margin-top: 30px;
     margin-bottom: 20px;
 }
 
-h3{
+h3 {
     font-size: 18px;
 }
 
@@ -64,7 +62,7 @@ ul {
     font-weight: bold;
 }
 
-/*  header */
+/*  --HEADER-- */
 
 header{
     border-bottom: solid 1px #f3735f;
@@ -73,7 +71,8 @@ header{
 }
 
 header img {
-    height:60px; /* cannot use 80% ? failed to vertically center*/
+    height: 60px; /* cannot use 80% ? failed to vertically center */
+    margin-top: 10px;
 }
 
 /* --MAIN-- */
@@ -82,6 +81,7 @@ main > .container {
     background-color: #fff;
     margin-top: 20px;
     padding: 30px 20px;
+    border-radius: 10px;
 }
 
 h1, .baseLine, .time {
@@ -89,8 +89,8 @@ h1, .baseLine, .time {
 }
 
 p.time {
-    display: inline-block; /*?*/
-    margin: 0 auto; /*?*/
+    width: 500px;
+    margin: 0 auto;
     padding: 10px 30px;
     background-color: #8A98B1;
     border-radius: 5px;
