--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,21 @@
-/* GENERAL */
+/* -- CONFIG & PROPS-- */
 
 *, ::before, ::after {
     box-sizing: border-box;
 }
 
+:root {
+    --clr-grey: #efefef;
+    --clr-black: #393c6c;
+    --clr-red: #f3735f; 
+}
+
+/* --GENERAL-- */
+
 body{
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
-    background-color: #efefef;
+    background-color: var(--clr-grey);
 }
 
 .container{
@@ -15,16 +23,13 @@ body{
     margin: 0 auto;
 }
 
-#section {
+section {
     background-color: white;
     padding: 60px 30px;
     border-radius: 20px;
 }
 
-p {
-    line-height: 22px;
-    margin-bottom: 20px;
-}
+
 
 h1, h2, h3 {
     font-weight: bold;
@@ -36,26 +41,31 @@ h1, h2 {
 
 h1 {
     font-size: 50px;
+    color: var(--clr-black);
 }
 
 h2 {
     font-size: 30px;
-    color: red;
-    margin-top: 30px;
+    color:var(--clr-red);
+    margin-top: 70px;
     margin-bottom: 20px;
 }
 
 h3 {
     font-size: 18px;
+    color:var(--clr-black);
+    line-height: 22px;
 }
 
 p {
-    margin-bottom: 1rem;
+    line-height: 22px;
+    margin-bottom: 20px;
 }
+
 
 ul {
     list-style: disc;
-    padding: 1rem;
+    padding: 0 1rem;
 }
 
 .boldText {
@@ -65,23 +75,20 @@ ul {
 /*  --HEADER-- */
 
 header{
-    border-bottom: solid 1px #f3735f;
+    border-bottom: solid 1px var(--clr-red);
     background-color: white;
     height: 80px;
 }
 
 header img {
-    height: 60px; /* cannot use 80% ? failed to vertically center */
+    height: 60px;
     margin-top: 10px;
 }
 
 /* --MAIN-- */
 
-main > .container {
-    background-color: #fff;
-    margin-top: 20px;
-    padding: 30px 20px;
-    border-radius: 10px;
+main section {
+    margin-top:20px;
 }
 
 h1, .baseLine, .time {
@@ -92,7 +99,7 @@ p.time {
     width: 500px;
     margin: 0 auto;
     padding: 10px 30px;
-    background-color: #8A98B1;
+    background-color: var(--clr-black);
     border-radius: 5px;
     font-weight: bold;
     color: white;
